# rdfrag

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
artifacts/metrics/csv/: answer_length_results.csv  knowledge_backend_summary.csv  knowledge_coverage.csv  pipeline_stage_metrics.csv  qwen3_lora_generation_metrics.csv  retrieval_query_results.csv  topk_summary.csv
artifacts/metrics/json/: knowledge_coverage_summary.json  pipeline_summary.json  retrieval_summary.json
artifacts/plots/graph/: graph_visualizations_manifest.json
artifacts/plots/project/: project_visualizations_manifest.json
artifacts/reports/: retrieval_experiment_summary.html
artifacts/reports/figures/: figure_index.md  graph_visualizations.md  project_visualizations.md
artifacts/reports/tables/: answer_summary.md  demo_queries.md  knowledge_backend_summary.md  retrieval_per_query.md  retrieval_summary.csv  retrieval_summary.md  topk_summary.md
data/eval/: gold_queries.json  pipeline_summary.json
data/rdf/: knowledge_documents.jsonl  knowledge_graph.ttl  manifest.json  triples.jsonl
scripts/: analyze_lora_comparison.py  generate_graph_visualizations.py  generate_project_visualizations.py  plot_lora_training_loss.py  prepare_lora_dataset.py  run_evaluation.py  run_ingestion.py  train_qwen3_lora.py  upload_rdf.py
src/rdfrag_vkr/: __init__.py  config.py  schemas.py
src/rdfrag_vkr/api/: app.py
src/rdfrag_vkr/modules/: evaluation.py  hybrid_retriever.py  ner.py  (+8 more)
tests/: test_api.py  test_knowledge_pipeline.py  test_pdf_parser.py  test_preprocessing.py
(+5 files in other folders)
